--- a/package.json
+++ b/package.json
@@ -13,30 +13,42 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~50.0.8",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.7",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "@reduxjs/toolkit": "^2.2.5",
+    "expo": "~52.0.38",
+    "expo-build-properties": "~0.13.2",
+    "expo-font": "~13.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.18",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
+    "moment": "^2.30.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-devsettings": "^1.0.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.2",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "styled-components": "^5"
+  }
 }
